--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,18 @@
   </head>
 
   <body>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+    <% if current_user %>
+      <%= link_to t('pages.index.sign_out'), destroy_user_session_path, method: :delete %>
+    <% else %>
+      <div>
+        <%= link_to t('pages.index.sign_up'), new_user_registration_path %>
+      </div>
+      <div>
+        <%= link_to t('pages.index.sign_in'), new_user_session_path %>
+      </div>
+    <% end %>
     <%= yield %>
   </body>
 </html>
