--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,6 @@
 <%= simple_form_for @user do |f| %>
   <%= image_tag(@user.profile_picture.variant(resize_to_limit: [150, 150])) %>
+  <%= f.label :profile_picture %>
   <%= f.file_field :profile_picture %>
   <%= f.input :remove_profile, as: :boolean, input_html: { checked: false } %>
   <%= f.input :email %>
